# MultiprojectOpenGL

./: .gitignore  CMakeLists.txt  README.md  build_windows.ps1  build_windows.sh
includes/assimp/: revision.h
includes/glad/: gl.h
includes/multiproject/: camera.h  cubemap.h  filesystem.h  light.h  mesh.h  model.h  postprocesseffect.h  shader.h  skybox.h  texture.h
lib/: assimp-vc143-mtd.exp  assimp.lib  glfw3.lib
projects/instancing/: main.cpp
resources/shaders/: default.fs  defaultNoUbo.vs  defaultNoUboShadow.vs  defaultShadow.fs  depthCubemap.fs  depthCubemap.gs  depthCubemap.vs  depthmap.fs  depthmap.vs  depthmapvisualization.fs  depthmapvisualization.vs  depthvisualization.fs  explode.gs  grayscale.fs  invert.fs  normalvisualization.fs  normalvisualization.gs  normalvisualizationcentered.gs  postprocess.fs  reflections.fs  refractions.fs  singleColor.fs  transparent.fs  transparent.vs
src/: camera.h  cubemap.h  default.vs  edgedetection.fs  instancing.vs  light.h  mesh.h  model.h  normalvisualization.vs  postprocess.vs  postprocesseffect.h  shader.h  skybox.h  skybox.vs  texture.h
src/cubemap-environment/: main.cpp
src/depthvisualization/: main.cpp
src/edgedetection/: main.cpp
src/explode-geometry/: main.cpp
src/instancing/: main.cpp
src/shadowmapping/: main.cpp
src/stencil/: main.cpp
src/transparency/: main.cpp
